landing page updated

--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
       </div>
       <div id="navbar_right">
         <div id="check_out" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_check">
             <a href="#">
               <svg
                 role="img"
@@ -343,40 +343,40 @@
         <div class="left">
           <div>
             <div>
-              <a href="#home" class="holiday-main">
+              <a href="mens_clothing.html" class="holiday-main">
                 <span style="font-weight: 500">SEPHORA</span> + Kohl's</a
               >
             </div>
             <div>
-              <a href="#home" class="holiday-saving-event"
+              <a href="mens_clothing.html" class="holiday-saving-event"
                 >Holiday Saving Event is Here!</a
               >
             </div>
             <div>
-              <a href="#home" class="beauty-insider"
+              <a href="mens_clothing.html" class="beauty-insider"
                 >Beauty Insiders Save Big:</a
               >
             </div>
             <div class="last-div">
               <div class="left-text">
-                <a href="#home" class="use-code">
+                <a href="mens_clothing.html" class="use-code">
                   USE CODE <span style="color: red">YAYHOLIDAY</span>
                 </a>
                 <div class="apply-text">
                   in store and online. Exclusions Apply
                 </div>
 
-                <a href="#home" class="shop-now">Shop Now</a>
+                <a href="mens_clothing.html" class="shop-now">Shop Now</a>
               </div>
               <div class="right-img">
-                <a href="#home">
+                <a href="mens_clothing.html">
                   <img
                     src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211105-sephora_tier_circle_01"
                     alt="Rouge. 20% off november 5 thougth 15"
                     class="offer-img"
                   />
                 </a>
-                <a href="#home">
+                <a href="mens_clothing.html">
                   <img
                     src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211105-sephora_tier_circle_02"
                     alt="VIB. 15% off november 9 through 15"
@@ -384,7 +384,7 @@
                   />
                 </a>
 
-                <a href="#home">
+                <a href="mens_clothing.html">
                   <img
                     src="https://media.kohlsimg.com/is/image/kohls/hp2-dm-20211105-sephora_tier_circle_03"
                     alt="Insider. 10% off november 11 through 15"
@@ -403,13 +403,13 @@
           </div>
           <div class="right-text2">Not a Beauty Insider?</div>
           <div class="sign-up-text">
-            <a href="" class="sign-up-text"
+            <a href="mens_clothing.html" class="sign-up-text"
               >sign up now and get 10% off <br />
               with the code YAYHOLIDAY 11/11-11/15.</a
             >
           </div>
           <div>
-            <a href="#home" class="join-now-text">join Now</a>
+            <a href="mens_clothing.html" class="join-now-text">join Now</a>
           </div>
         </div>
       </div>
@@ -417,24 +417,24 @@
     <!-- sephora collection -->
     <div class="main-div">
       <div class="left-col">
-        <a href="">
+        <a href="mens_clothing.html">
           <img src="./images/home_img/1.png" alt="" />
         </a>
       </div>
       <div class="middle-col">
-        <a href="">
+        <a href="mens_clothing.html">
           <img src="./images/home_img/2.png" alt="" />
         </a>
       </div>
       <div class="right-col">
-        <a href="">
+        <a href="mens_clothing.html">
           <img src="./images/home_img/3.png" alt="" />
         </a>
       </div>
     </div>
     <!-- Explore the gift shop section -->
     <div id="heart">
-      <a href="#">
+      <a href="mens_clothing.html">
         <picture>
           <source
             media="(max-width:800px)"
@@ -448,35 +448,35 @@
       <div id="offer">
         <ul id="offer_logos">
           <li>
-            <a href="#offer">
+            <a href="mens_clothing.html">
               <div id="offer_div">
                 <img src="./images/gift_1.png" />
               </div>
             </a>
           </li>
           <li>
-            <a href="#offer">
+            <a href="mens_clothing.html">
               <div id="offer_div">
                 <img src="./images/10pe_2.png" />
               </div>
             </a>
           </li>
           <li>
-            <a href="#offer">
+            <a href="mens_clothing.html">
               <div id="offer_div">
                 <img src="./images/20p_3.png" />
               </div>
             </a>
           </li>
           <li>
-            <a href="#offer">
+            <a href="mens_clothing.html">
               <div id="offer_div">
                 <img src="./images/50pe_4.png" />
               </div>
             </a>
           </li>
           <li>
-            <a href="#offer">
+            <a href="mens_clothing.html">
               <div id="offer_div">
                 <img src="./images/100pe_5.png" />
               </div>
@@ -502,47 +502,47 @@
     </div>
     <!-- gift the brands -->
     <div id="gift_box">
-      <a href="#gift" id="gift_title">
+      <a href="mens_clothing.html" id="gift_title">
         Gift the brands &nbsp;they're sure to love.
       </a>
       <ul id="gift_logos">
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_1.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_2.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_3.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_4.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_5.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_6.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_7.png" /></div>
           </a>
         </li>
         <li>
-          <a href="#gift" id="gift_img">
+          <a href="mens_clothing.html" id="gift_img">
             <div id="gift_img_div"><img src="./images/gift_8.png" /></div>
           </a>
         </li>
@@ -670,19 +670,19 @@
     </div>
     <!-- honoring -->
     <div class="main-div">
-      <a href="#home">
+      <a href="mens_clothing.html">
         <img src="./images/home_img/pic5.png" alt="" class="vetranday-img" />
       </a>
     </div>
     <!-- thank you -->
     <div class="main-div">
-      <a href="#home">
+      <a href="mens_clothing.html">
         <img src="./images/home_img/pic7.png" alt="" class="img" />
       </a>
     </div>
     <!-- pro form fit -->
     <div class="main-div">
-      <a href="#home">
+      <a href="mens_clothing.html">
         <img src="./images/home_img/pic6.png" alt="" class="img" />
       </a>
     </div>
@@ -698,7 +698,7 @@
             </div>
           </div>
 
-          <a href="#home" class="text">
+          <a href="mens_clothing.html" class="text">
             <p class="yummy">Tommy Hilfiger</p>
           </a>
         </div>
@@ -711,7 +711,7 @@
             </div>
           </div>
 
-          <a href="" class="text">
+          <a href="mens_clothing.html" class="text">
             <p class="yummy">Calvin Kelin</p>
           </a>
         </div>
@@ -723,7 +723,7 @@
             </div>
           </div>
 
-          <a href="" class="text">
+          <a href="mens_clothing.html" class="text">
             <p class="yummy">Eddie Bauer</p>
           </a>
         </div>
@@ -735,7 +735,7 @@
             </div>
           </div>
 
-          <a href="" class="text">
+          <a href="mens_clothing.html" class="text">
             <p class="yummy">Yummy Sweater Co.</p>
           </a>
         </div>
@@ -744,19 +744,19 @@
     <!-- outfit -->
     <div class="main-div-fit">
       <div class="div1">
-        <a href="#home">
+        <a href="mens_clothing.html">
           <img src="./images/home_img/pic9.png" alt="" />
         </a>
       </div>
 
       <div class="div2">
-        <a href="#home">
+        <a href="mens_clothing.html">
           <img src="./images/home_img/pic10.png" alt="" />
         </a>
       </div>
       <div class="div3">
         <div class="fit-left-col">
-          <a href="#home">
+          <a href="mens_clothing.html">
             <img
               src="./images/home_img/outdoor active.png"
               alt=""
@@ -764,7 +764,7 @@
             />
           </a>
 
-          <a href="#home">
+          <a href="mens_clothing.html">
             <img
               src="./images/home_img/go-on-the.png"
               alt=""
@@ -774,11 +774,11 @@
         </div>
 
         <div class="fit-right-col">
-          <a href="#home">
+          <a href="mens_clothing.html">
             <img src="./images/home_img/work.png" alt="" class="work-img" />
           </a>
 
-          <a href="#home">
+          <a href="mens_clothing.html">
             <img src="./images/home_img/special moments.png" alt="" />
           </a>
         </div>
@@ -800,7 +800,7 @@
       <div id="more_rightarrow" onclick="morePlusSlides(1)"></div>
     </div>
     <!-- clearance -->
-    <a href="#home">
+    <a href="mens_clothing.html">
       <div id="clearance">
         <div id="absolute_div">
           <img src="./images/clearance.jpg" alt="" />
@@ -823,7 +823,7 @@
     </div>
     <!-- holiday -->
     <div id="holiday">
-      <a href="#home">
+      <a href="mens_clothing.html">
         <div id="holiday_top">
           <picture>
             <img src="./images/holiday_top.jpg" />
@@ -851,7 +851,7 @@
     </div>
     <!-- Get Inspired -->
     <div id="get_inspired">
-      <a href="#home">
+      <a href="mens_clothing.html">
         <picture>
           <img
             src="https://media.kohlsimg.com/is/image/kohls/hp2-d-20211007-social-bkg"
@@ -861,7 +861,7 @@
     </div>
     <!-- community -->
     <div id="community">
-      <a href="#home"><img src="./images/community.jpg" /></a>
+      <a href="mens_clothing.html"><img src="./images/community.jpg" /></a>
     </div>
     <!-- disclaimer -->
     <div id="disclaimer">
