--- a/description.html
+++ b/description.html
@@ -97,7 +97,7 @@
       </div>
       <div id="navbar_right">
         <div id="check_out" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_check">
             <a href="#">
               <svg
                 role="img"
@@ -122,8 +122,8 @@
           </div>
         </div>
         <div id="cart" class="nav_right">
-          <div class="inner_div">
-            <a href="cart.html" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
+          <div class="inner_div" id="go_cart">
+            <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
             <a href="#check" class="link"> $0.00 </a>
           </div>
