--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div id="cart" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_cart">
             <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
             <a href="#check" class="link"> $0.00 </a>
