--- a/product.html
+++ b/product.html
@@ -94,7 +94,7 @@
       </div>
       <div id="navbar_right">
         <div id="check_out" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_check">
             <a href="#">
               <svg
                 role="img"
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div id="cart" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_cart">
             <a href="cart.html" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
             <a href="#check" class="link"> $0.00 </a>
