--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,7 @@
       </div>
       <div id="navbar_right">
         <div id="check_out" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_check">
             <a href="#">
               <svg
                 role="img"
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div id="cart" class="nav_right">
-          <div class="inner_div">
+          <div class="inner_div" id="go_cart">
             <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
             <a href="#check" class="link"> $0.00 </a>
