--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <!-------------- page icon --------------->
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <!-- ---------css stylesheet ------------->
-    <link rel="stylesheet" href="./home.css" type="text/css" />
+    <link rel="stylesheet" href="./css/home.css" type="text/css" />
     <!----------font awesome cdn ------------->
     <link
       rel="stylesheet"
@@ -1092,4 +1092,4 @@
     </div>
   </body>
 </html>
-<script src="./home.js"></script>
+<script src="./js/home.js"></script>
