--- a/description.html
+++ b/description.html
@@ -13,7 +13,7 @@
 
     <!-- ---------css stylesheet ------------->
 
-    <link rel="stylesheet" href="./description.css" type="text/css" />
+    <link rel="stylesheet" href="./css/description.css" type="text/css" />
 
     <!----------font awesome cdn ------------->
     <link
@@ -613,7 +613,7 @@
     </div>
   </body>
 </html>
-<script src="./description.js"></script>
+<script src="./js/description.js"></script>
 
 </body>
 </html>
