--- a/mens_clothing.html
+++ b/mens_clothing.html
@@ -10,7 +10,7 @@
 
     <!-- ---------css stylesheet ------------->
 
-    <link rel="stylesheet" href="./mens_clothing.css" type="text/css" />
+    <link rel="stylesheet" href="./css/mens_clothing.css" type="text/css" />
 
     <!----------font awesome cdn ------------->
     <link
@@ -966,4 +966,4 @@
     </div>
   </body>
 </html>
-<script src="./mens_clothing.js"></script>
+<script src="./js/mens_clothing.js"></script>
