--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
 
     <!-- ---------css stylesheet ------------->
 
-    <link rel="stylesheet" href="./signin.css" type="text/css" />
+    <link rel="stylesheet" href="./css/signin.css" type="text/css" />
 
     <!----------font awesome cdn ------------->
     <link
@@ -608,4 +608,4 @@
     </div>
   </body>
 </html>
-<script src="./signin.js"></script>
+<script src="./js/signin.js"></script>
