--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping Bag - Kohls.com</title>
-    <link rel="stylesheet" href="./cart.css" />
+    <link rel="stylesheet" href="./css/cart.css" />
 
     <!-------------- page icon --------------->
     <link rel="icon" href="./cart_img/favicon.ico" type="image/x-icon" />
@@ -407,4 +407,4 @@
     </div>
   </body>
 </html>
-<script src="./cart.js"></script>
+<script src="./js/cart.js"></script>
