--- a/empty.html
+++ b/empty.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping Bag - Kohls.com</title>
-    <link rel="stylesheet" href="./empty.css" />
+    <link rel="stylesheet" href="./css/empty.css" />
 
     <!-------------- page icon --------------->
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
