--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout - Kohls.com</title>
-    <link rel="stylesheet" href="./payment.css" />
+    <link rel="stylesheet" href="./css/payment.css" />
     <!-------------- page icon --------------->
     <link rel="icon" href="./payment_img/favicon.ico" type="image/x-icon" />
   </head>
@@ -289,5 +289,5 @@
       />
     </div>
   </body>
-  <script src="./payment.js"></script>
+  <script src="./js/payment.js"></script>
 </html>
