--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
 
     <!-- ---------css stylesheet ------------->
 
-    <link rel="stylesheet" href="./product.css" type="text/css" />
+    <link rel="stylesheet" href="./css/product.css" type="text/css" />
 
     <!----------font awesome cdn ------------->
     <link
@@ -1025,4 +1025,4 @@
    
   </body>
 </html>
-<script src="./product.js"></script>
+<script src="./js/product.js"></script>
