--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 
     <!-- ---------css stylesheet ------------->
 
-    <link rel="stylesheet" href="./signup.css" type="text/css" />
+    <link rel="stylesheet" href="./css/signup.css" type="text/css" />
 
     <!----------font awesome cdn ------------->
     <link
@@ -651,4 +651,4 @@
     </div>
   </body>
 </html>
-<script src="./signup.js"></script>
+<script src="./js/signup.js"></script>
