--- a/description.html
+++ b/description.html
@@ -9,7 +9,7 @@
     </title>
      <!-------------- page icon --------------->
 
-    <link rel="icon" href="./desc Images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/desc_images/favicon.ico" type="image/x-icon" />
 
     <!-- ---------css stylesheet ------------->
 
@@ -309,7 +309,7 @@
 <!-- Kohl’s Cash Banner image     -->
 
 <div class="kohlsBanner">
-    <img src="./desc Images/kohlsdescriptionbanner.JPG" alt="cashBanner"/>
+    <img src="./images/desc_images/kohlsdescriptionbanner.JPG" alt="cashBanner"/>
 </div>
 
 <!-- productNav starts -->
@@ -333,7 +333,7 @@
     <div class="right"></div>
 </div>
 <!-- description footer starts -->
- <div id="sbsn"><img src="./ns11.png" alt=""></div>
+ <div id="sbsn"><img src="./images/desc_images/ns11.png" alt=""></div>
  <div id="ftn">STYLE IT YOUR WAY</div>
 
            <div id="nc">
@@ -349,16 +349,16 @@
             <div id="recently_parent">
                 <div id="recently_leftarrow" onclick="plusSlides(-1)"></div>
                 <div class="recently_child recentlyMySlides">
-                  <img src="./desc Images/ns1.png" alt="1" />
+                  <img src="./images/desc_images/ns1.png" alt="1" />
                 </div>
                 <div class="recently_child recentlyMySlides">
-                  <img src="./desc Images/ns2.png" alt="2" />
+                  <img src="./images/desc_images/ns2.png" alt="2" />
                 </div>
                 <div class="recently_child recentlyMySlides">
-                  <img src="./desc Images/ns3.png" alt="3" />
+                  <img src="./images/desc_images/ns3.png" alt="3" />
                 </div>
                 <div class="recently_child recentlyMySlides">
-                  <img src="./desc Images/ns4.png" alt="4" />
+                  <img src="./images/desc_images/ns4.png" alt="4" />
                 </div>
                 <div id="recently_rightarrow" onclick="plusSlides(1)"></div>
               </div>
@@ -507,7 +507,7 @@
             APP
           </p>
           <div id="code">
-            <img src="./desc Images/qrcode.jpg" alt="" />
+            <img src="./images/desc_images/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
