--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/cart.css" />
 
     <!-------------- page icon --------------->
-    <link rel="icon" href="./cart_img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/cart_img/favicon.ico" type="image/x-icon" />
 
     <!----------font awesome cdn ------------->
     <link
@@ -167,31 +167,31 @@
 
           <div class="banner">
             <img
-              src="./cart_img/earn_10.jpg"
+              src="./images/cart_img/earn_10.jpg"
               alt=""
               srcset=""
               id="banner-img2"
             />
             <img
-              src="./cart_img/save_35.png"
+              src="./images/cart_img/save_35.png"
               alt=""
               srcset=""
               id="banner-img1"
             />
             <img
-              src="./cart_img/get_10.png"
+              src="./images/cart_img/get_10.png"
               alt=""
               srcset=""
               id="banner-img2"
             />
             <img
-              src="./cart_img/give_gift.jpg"
+              src="./images/cart_img/give_gift.jpg"
               alt=""
               srcset=""
               id="banner-img2"
             />
             <img
-              src="./cart_img/more_you.jpg"
+              src="./images/cart_img/more_you.jpg"
               alt=""
               srcset=""
               id="banner-img2"
@@ -301,7 +301,7 @@
             APP
           </p>
           <div id="code">
-            <img src="cart_img/qrcode.jpg" alt="" />
+            <img src="./images/desc_images/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
