--- a/home.html
+++ b/home.html
@@ -323,10 +323,10 @@
           </div>
         </div>
         <div id="dot_div">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-          <span class="dot" onclick="currentSlide(4)"></span>
+          <span class="home_dot" onclick="homeCurrentSlide(1)"></span>
+          <span class="home_dot" onclick="homeCurrentSlide(2)"></span>
+          <span class="home_dot" onclick="homeCurrentSlide(3)"></span>
+          <span class="home_dot" onclick="homeCurrentSlide(4)"></span>
         </div>
       </div>
     </div>
@@ -442,7 +442,7 @@
               https://media.kohlsimg.com/is/image/kohls/hp2-m-20211101-holidaygiftshop-bkg
             "
           />
-          <img src="./images/heart.jpg" />
+          <img src="./images/home_img/heart.jpg" />
         </picture>
       </a>
       <div id="offer">
@@ -450,35 +450,35 @@
           <li>
             <a href="mens_clothing.html">
               <div id="offer_div">
-                <img src="./images/gift_1.png" />
+                <img src="./images/home_img/gift_1.png" />
               </div>
             </a>
           </li>
           <li>
             <a href="mens_clothing.html">
               <div id="offer_div">
-                <img src="./images/10pe_2.png" />
+                <img src="./images/home_img/10pe_2.png" />
               </div>
             </a>
           </li>
           <li>
             <a href="mens_clothing.html">
               <div id="offer_div">
-                <img src="./images/20p_3.png" />
+                <img src="./images/home_img/20p_3.png" />
               </div>
             </a>
           </li>
           <li>
             <a href="mens_clothing.html">
               <div id="offer_div">
-                <img src="./images/50pe_4.png" />
+                <img src="./images/home_img/50pe_4.png" />
               </div>
             </a>
           </li>
           <li>
             <a href="mens_clothing.html">
               <div id="offer_div">
-                <img src="./images/100pe_5.png" />
+                <img src="./images/home_img/100pe_5.png" />
               </div>
             </a>
           </li>
@@ -497,7 +497,7 @@
       <div id="toy_left"></div>
       <div id="toy_right"></div>
       <div id="toy_banner">
-        <img src="./images/toy_banner.jpg" />
+        <img src="./images/home_img/toy_banner.jpg" />
       </div>
     </div>
     <!-- gift the brands -->
@@ -508,42 +508,58 @@
       <ul id="gift_logos">
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_1.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_1.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_2.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_2.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_3.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_3.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_4.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_4.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_5.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_5.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_6.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_6.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_7.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_7.png" />
+            </div>
           </a>
         </li>
         <li>
           <a href="mens_clothing.html" id="gift_img">
-            <div id="gift_img_div"><img src="./images/gift_8.png" /></div>
+            <div id="gift_img_div">
+              <img src="./images/home_img/gift_8.png" />
+            </div>
           </a>
         </li>
       </ul>
@@ -560,13 +576,13 @@
       <div id="adidas_left"></div>
       <div id="adidas_right"></div>
       <div id="adidas_banner">
-        <img src="./images/adidas_banner.jpg" />
+        <img src="./images/home_img/adidas_banner.jpg" />
       </div>
     </div>
     <!-- level of chill section -->
     <div class="chill">
       <div id="static_chill_div">
-        <img src="./images/chill.jpg" alt="" />
+        <img src="./images/home_img/chill.jpg" alt="" />
       </div>
       <div class="slider_right">
         <div class="parent">
@@ -574,16 +590,16 @@
             <button>&lt;</button>
           </div>
           <div class="child mySlides">
-            <img src="./images/slider_2_women.jpg" alt="" />
+            <img src="./images/home_img/slider_2_women.jpg" alt="" />
           </div>
           <div class="child mySlides">
-            <img src="./images/slider_2_men.jpg" alt="" />
+            <img src="./images/home_img/slider_2_men.jpg" alt="" />
           </div>
           <div class="child mySlides">
-            <img src="./images/slider_2_kids.jpg" alt="" />
+            <img src="./images/home_img/slider_2_kids.jpg" alt="" />
           </div>
           <div class="child mySlides">
-            <img src="./images/slider_2_shoes.jpg" alt="" />
+            <img src="./images/home_img/slider_2_shoes.jpg" alt="" />
           </div>
           <div id="rightarrow" onclick="plusSlides(1)">
             <button>&gt;</button>
@@ -789,13 +805,13 @@
     <div id="more_parent">
       <div id="more_leftarrow" onclick="morePlusSlides(-1)"></div>
       <div class="more_child moreMySlides">
-        <img src="./images/slider_3_1.jpg" alt="1" />
+        <img src="./images/home_img/slider_3_1.jpg" alt="1" />
       </div>
       <div class="more_child moreMySlides">
-        <img src="./images/slider_3_2.jpg" alt="" />
+        <img src="./images/home_img/slider_3_2.jpg" alt="" />
       </div>
       <div class="more_child moreMySlides">
-        <img src="./images/slider_3_3.jpg" alt="" />
+        <img src="./images/home_img/slider_3_3.jpg" alt="" />
       </div>
       <div id="more_rightarrow" onclick="morePlusSlides(1)"></div>
     </div>
@@ -803,7 +819,7 @@
     <a href="mens_clothing.html">
       <div id="clearance">
         <div id="absolute_div">
-          <img src="./images/clearance.jpg" alt="" />
+          <img src="./images/home_img/clearance.jpg" alt="" />
         </div>
       </div>
     </a>
@@ -813,10 +829,10 @@
       <div id="recently_parent">
         <div id="recently_leftarrow" onclick="recentlyPlusSlides(-1)"></div>
         <div class="recently_child recentlyMySlides">
-          <img src="./images/slider_4_1.jpg" alt="1" />
+          <img src="./images/home_img/slider_4_1.jpg" alt="1" />
         </div>
         <div class="recently_child recentlyMySlides">
-          <img src="./images/slider_4_2.jpg" alt="2" />
+          <img src="./images/home_img/slider_4_2.jpg" alt="2" />
         </div>
         <div id="recently_rightarrow" onclick="recentlyPlusSlides(1)"></div>
       </div>
@@ -826,21 +842,21 @@
       <a href="mens_clothing.html">
         <div id="holiday_top">
           <picture>
-            <img src="./images/holiday_top.jpg" />
+            <img src="./images/home_img/holiday_top.jpg" />
           </picture>
         </div>
         <div id="holiday_middle">
           <div class="holiday_middle_img">
-            <img src="./images/holiday_amazonjpg.jpg" />
+            <img src="./images/home_img/holiday_amazonjpg.jpg" />
           </div>
           <div class="holiday_middle_img">
-            <img src="./images/holiday_kohli_rewards.jpg" />
+            <img src="./images/home_img/holiday_kohli_rewards.jpg" />
           </div>
           <div class="holiday_middle_img">
-            <img src="./images/holiday_kohli_appjpg.jpg" />
+            <img src="./images/home_img/holiday_kohli_appjpg.jpg" />
           </div>
           <div class="holiday_middle_img">
-            <img src="./images/holiday_gifts.jpg" alt="" />
+            <img src="./images/home_img/holiday_gifts.jpg" alt="" />
           </div>
         </div>
         <p id="holiday_bottom">
@@ -861,7 +877,9 @@
     </div>
     <!-- community -->
     <div id="community">
-      <a href="mens_clothing.html"><img src="./images/community.jpg" /></a>
+      <a href="mens_clothing.html"
+        ><img src="./images/home_img/community.jpg"
+      /></a>
     </div>
     <!-- disclaimer -->
     <div id="disclaimer">
@@ -986,7 +1004,7 @@
             APP
           </p>
           <div id="code">
-            <img src="./images/qrcode.jpg" alt="" />
+            <img src="./images/home_img/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
