--- a/mens_clothing.html
+++ b/mens_clothing.html
@@ -6,7 +6,11 @@
     <title>Men's Clothing: Explore Clothes For Men | Kohl's</title>
     <!-------------- page icon --------------->
 
-    <link rel="icon" href="./men.images/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="./images/men.images/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- ---------css stylesheet ------------->
 
@@ -708,16 +712,16 @@
           <div id="recently_parent">
             <div id="recently_leftarrow" onclick="plusSlides(-1)"></div>
             <div class="recently_child recentlyMySlides">
-              <img src="men.images/1.jpg" alt="1" />
+              <img src="./images/men.images/1.jpg" alt="1" />
             </div>
             <div class="recently_child recentlyMySlides">
-              <img src="./men.images/2.jpg" alt="2" />
+              <img src="./images/men.images/2.jpg" alt="2" />
             </div>
             <div class="recently_child recentlyMySlides">
-              <img src="./men.images/3.jpg" alt="3" />
+              <img src="./images/men.images/3.jpg" alt="3" />
             </div>
             <div class="recently_child recentlyMySlides">
-              <img src="./men.images/4.jpg" alt="4" />
+              <img src="./images/men.images/4.jpg" alt="4" />
             </div>
             <div id="recently_rightarrow" onclick="plusSlides(1)"></div>
           </div>
@@ -860,7 +864,7 @@
             APP
           </p>
           <div id="code">
-            <img src="men.images/qrcode.jpg" alt="" />
+            <img src="./images/men.images/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
