--- a/payment.html
+++ b/payment.html
@@ -7,7 +7,7 @@
     <title>Checkout - Kohls.com</title>
     <link rel="stylesheet" href="./css/payment.css" />
     <!-------------- page icon --------------->
-    <link rel="icon" href="./payment_img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container">
