--- a/product.html
+++ b/product.html
@@ -303,7 +303,7 @@
     <br>
     <br>
     <div class="savings">
-  <img src="./images/savings.JPG">
+  <img src="./images/desc_images/savings.JPG">
 </div>
     <!-----Gift Ideas for Men Navigation-->
     <div class="gifts">
@@ -916,7 +916,7 @@
             APP
           </p>
           <div id="code">
-            <img src="./images/qrcode.jpg" alt="" />
+            <img src="./images/home_img/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
