--- a/empty.html
+++ b/empty.html
@@ -156,7 +156,7 @@
             APP
           </p>
           <div id="code">
-            <img src="./images/qrcode.jpg" alt="" />
+            <img src="./images/home_img/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
