--- a/description.html
+++ b/description.html
@@ -123,9 +123,9 @@
         </div>
         <div id="cart" class="nav_right">
           <div class="inner_div" id="go_cart">
-            <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
+            <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i><sup id="cart_qty" ></sup> </a
             ><br />
-            <a href="#check" class="link"> $0.00 </a>
+            <a href="#check" class="link">Cart</a>
           </div>
         </div>
         <div id="account" class="nav_right">
@@ -150,7 +150,7 @@
                 </g>
               </svg> </a
             ><br />
-            <a href="#" class="link"> Account </a>
+            <a href="#" class="link" id="user_name"> Account </a>
           </div>
           <div class="dropdown-content">
             <button id="sign_in_button">SIGN IN</button>
