--- a/mens_clothing.html
+++ b/mens_clothing.html
@@ -124,7 +124,7 @@
           <div class="inner_div" id="go_cart">
             <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
-            <a href="#check" class="link"> $0.00 </a>
+            <a href="#check" class="link"> Cart </a>
           </div>
         </div>
         <div id="account" class="nav_right">
@@ -149,7 +149,7 @@
                 </g>
               </svg> </a
             ><br />
-            <a href="#" class="link"> Account </a>
+            <a href="#" class="link" id="user_name"> Account </a>
           </div>
           <div class="dropdown-content">
             <button id="sign_in_button">SIGN IN</button>
