--- a/signup.html
+++ b/signup.html
@@ -144,7 +144,7 @@
                 </g>
               </svg> </a
             ><br />
-            <a href="#" class="link" id="user_name"> </a>
+            <a href="#" class="link" id="user_name">Account </a>
           </div>
           <div class="dropdown-content">
             <button id="sign_in_button">SIGN IN</button>
