--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
           <div class="inner_div" id="go_cart">
             <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
-            <a href="#check" class="link"> $0.00 </a>
+            <a href="#check" class="link"> Cart </a>
           </div>
         </div>
         <div id="account" class="nav_right">
