--- a/product.html
+++ b/product.html
@@ -658,13 +658,13 @@
 <div id="recently_parent">
       <div id="recently_leftarrow" onclick="plusSlides(-1)"></div>
       <div class="recently_child recentlyMySlides">
-        <img src="./images/Capture1.JPG" alt="1" />
+        <img src="./images/home_img/Capture1.JPG" alt="1" />
       </div>
       <div class="recently_child recentlyMySlides">
-        <img src="./images/Capture2.JPG" alt="2" />
+        <img src="./images/home_img/Capture2.JPG" alt="2" />
       </div>
       <div class="recently_child recentlyMySlides">
-        <img src="./images/Capture3.JPG" alt="3" />
+        <img src="./images/home_img/Capture3.JPG" alt="3" />
       </div>
       <div id="recently_rightarrow" onclick="plusSlides(1)"></div>
   </div>
