Image Link Updated

--- a/signin.html
+++ b/signin.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account</title>
     <!-------------- page icon --------------->
-
-    <link rel="icon" href="men.images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
 
     <!-- ---------css stylesheet ------------->
 
@@ -375,7 +374,7 @@
       <div>
         <img
           id="lastimg"
-          src="https://www.kohls.com/account/media/42.0.0-680/images/kohls_cash_icon.png"
+          src="https://www.kohls.com/account/media/42.0.0-684/images/kohls_cash_icon.png"
           height="36px"
           alt=""
         />
@@ -502,7 +501,7 @@
             APP
           </p>
           <div id="code">
-            <img src="men.images/qrcode.jpg" alt="" />
+            <img src="./images/home_img/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
