--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Account</title>
     <!-------------- page icon --------------->
 
-    <link rel="icon" href="men.images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
 
     <!-- ---------css stylesheet ------------->
 
@@ -383,7 +383,7 @@
       <div>
         <img
           id="imgrewards"
-          src="	https://www.kohls.com/account/media/42.0.0-680/images/loyaltyV2/kohls-rewards-horizontal.png"
+          src="https://www.kohls.com/account/media/42.0.0-684/images/loyaltyV2/kohls-rewards-horizontal.png"
           alt="Kohl's Rewards Image"
         />
         <a href="" class="rewardstool" role="button" id="kohlcreatetip"></a>
@@ -545,7 +545,7 @@
             APP
           </p>
           <div id="code">
-            <img src="men.images/qrcode.jpg" alt="" />
+            <img src="./images/home_img/qrcode.jpg" alt="" />
           </div>
           <div id="app_info">
             <p>
