--- a/description.html
+++ b/description.html
@@ -123,7 +123,8 @@
         </div>
         <div id="cart" class="nav_right">
           <div class="inner_div" id="go_cart">
-            <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i><sup id="cart_qty" ></sup> </a
+            <div class="cart_new_div"><p id="cart_qty">0</p></div>
+            <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i><sup ></sup> </a
             ><br />
             <a href="#check" class="link">Cart</a>
           </div>
