--- a/description.html
+++ b/description.html
@@ -134,7 +134,7 @@
             <a href="#">
               <svg
                 role="img"
-                focusable="false"
+                focusable="false"k
                 overflow="visible"
                 preserveAspectRatio="none"
                 viewBox="0 0 34 34"
