--- a/home.html
+++ b/home.html
@@ -116,6 +116,7 @@
         </div>
         <div id="cart" class="nav_right">
           <div class="inner_div" id="go_cart">
+            <div class="cart_new_div"><p id="cart_qty">0</p></div>
             <a href="#" id="cart_icon"> <i class="fas fa-shopping-cart"></i> </a
             ><br />
             <a href="#check" class="link"> Cart </a>
